Fix image height overflow in the post with single image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1369,7 +1369,6 @@ form .post {
     object-fit: cover;
     object-position: center;
     max-height: 400px;
-    height: 100%;
     width: 100%;
 }
 
